<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_primary"
        tools:ignore="MissingConstraints">

        <View
            android:id="@+id/view_progress"
            style="@style/AppTheme.OnBoarding.ProgressView"
            tools:ignore="MissingConstraints" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_small"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_progress">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/view_onboarding_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize" />

                <TextView
                    android:id="@+id/text_create_avatar"
                    style="@style/AppTheme.OnBoarding.Text"
                    android:layout_marginTop="@dimen/onboarding_text_margin_top"
                    android:text="@string/create_digital_avatar"
                    app:layout_constraintTop_toBottomOf="@id/toolbar" />

                <TextView
                    android:id="@+id/text_face_id"
                    style="@style/AppTheme.OnBoarding.Text"
                    android:layout_marginTop="@dimen/onboarding_text_margin_top"
                    android:text="@string/face_id_scanned"
                    app:layout_constraintTop_toBottomOf="@id/text_create_avatar" />

                <TextView
                    android:id="@+id/text_fingerprint"
                    style="@style/AppTheme.OnBoarding.Text"
                    android:layout_marginTop="@dimen/margin_xxsmall"
                    android:text="@string/fingerprints_scanned"
                    app:layout_constraintTop_toBottomOf="@id/text_face_id" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_xxxlarge"
                    android:layout_marginTop="@dimen/margin_xxxlarge"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_fingerprint">

                    <!-- Full Name -->
                    <TextView
                        style="@style/AppTheme.OnBoarding.Text.CreateProfile"
                        android:text="@string/full_name" />

                    <EditText
                        style="@style/AppTheme.OnBoarding.Text.Field"
                        android:hint="@string/full_name" />

                    <!-- Date of Birth -->
                    <TextView
                        style="@style/AppTheme.OnBoarding.Text.CreateProfile"
                        android:text="@string/dob" />

                    <TextView
                        style="@style/AppTheme.OnBoarding.Text.Field"
                        android:hint="@string/dob" />

                    <!-- Email -->
                    <TextView
                        style="@style/AppTheme.OnBoarding.Text.CreateProfile"
                        android:text="@string/email" />

                    <EditText
                        style="@style/AppTheme.OnBoarding.Text.Field"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <!-- Phone Number -->
                    <TextView
                        style="@style/AppTheme.OnBoarding.Text.CreateProfile"
                        android:text="@string/phone" />

                    <EditText
                        style="@style/AppTheme.OnBoarding.Text.Field"
                        android:layout_marginBottom="@dimen/margin_xxxlarge"
                        android:hint="@string/phone"
                        android:inputType="phone" />

                    <include
                        layout="@layout/view_green_stroke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        app:title="@{@string/next}" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>